--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,7 +115,7 @@ android {
 
     defaultConfig {
         applicationId "com.colibri2"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 18
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
