--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "@react-native-firebase/app": "6.0.4",
     "@react-native-firebase/auth": "^6.0.4",
     "@react-native-firebase/firestore": "^6.0.4",
+    "@react-native-firebase/functions": "^6.0.4",
     "@remobile/react-native-toast": "^1.0.7",
+    "base-64": "^0.1.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-ble-manager": "^6.7.0",
+    "react-native-ble-plx": "^1.1.0",
     "react-native-bluetooth-serial-next": "^1.2.3",
+    "react-native-chart-kit": "^4.1.0",
     "react-native-svg": "^9.13.3",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
