--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-ble-plx": "^1.1.0",
     "react-native-bluetooth-serial-next": "^1.2.3",
     "react-native-chart-kit": "^4.1.0",
+    "react-native-modal": "^11.5.3",
     "react-native-svg": "^9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
