--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
     "react-native-bluetooth-serial-next": "^1.2.3",
     "react-native-chart-kit": "^4.1.0",
     "react-native-modal": "^11.5.3",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-paper": "^2.16.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-web": "^0.11.4",
     "react-native-svg": "^9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "vue-native-core": "^0.1.4",
+    "vue-native-helper": "^0.1.4",
+    "vue-native-router": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -40,7 +47,8 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "patch-package": "^6.1.4",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "vue-native-scripts": "^0.1.4"
   },
   "jest": {
     "preset": "react-native"
